Added a source file

--- a/add_event.html
+++ b/add_event.html
@@ -15,6 +15,7 @@
           <script src = "linkedlist.js"></script>
           <script src ="meeting.js"></script>
           <script src="global.js"></script>
+          <script src="attendee.js"></script>
           <script src="add_event.js"></script>
           <script src="dataIO.js"></script>
 
