Person who created the event should be attending the event

--- a/add_event.html
+++ b/add_event.html
@@ -21,7 +21,7 @@
 
     <title>Add Event</title>
   </head>
-  <body onload="timeSwitcher()">
+  <body onload="timeSwitcher(); setName()">
 
     <!-- HEADER -->
 
