--- a/events.html
+++ b/events.html
@@ -34,8 +34,8 @@
         </div>
     
         <div class="col-sm-5">
-            <input type="button" value="Create Event" id="createEvent" onclick="window.location = 'add_event.html'">
-            <input type=button value="Back" id="back" onclick="window.location = 'user.html'">
+            <input type="button" value="Create Another Event" id="createEvent" onclick="window.location = 'add_event.html'">
+            <input type=button value="Home" id="back" onclick="window.location = 'user.html'">
         </div>
     </div>
     <div>
