Added an admin mode

--- a/add_event.html
+++ b/add_event.html
@@ -98,7 +98,7 @@
 
             <!-- CANCEL BUTTON -->
          <button type="button" name="cancel" class="btn btn-primary"
-         onclick="alert('Redirecting to home.'), window.location='user_interface.html'">Cancel</button>
+         onclick="alert('Redirecting to home.'), window.location='user.html'">Cancel</button>
        </form>
      </div>
 
