--- a/user.html
+++ b/user.html
@@ -51,10 +51,10 @@
         </button>
     </form>
 
-    <form action = "add_event.html">
+    <form action = "adminMode.html">
             <button type="Continue" onclick= "addAvailability()"
             class="btn btn-primary" name="Continue">
-            Add Event
+            Admin Mode
             </button>
         </form>
 
