Some final changes
finishes the documentation and fixed a bug where it would go into an ifinite loop when you have no people created and tried to click one of the buttons

--- a/user.html
+++ b/user.html
@@ -44,16 +44,16 @@
 
     </div>
 
-    <form action = "user_availability.html">
-        <button type="Continue" onclick= "addAvailability()"
-        class="btn btn-primary" name="Continue">
+    <form action="javascript:addAvailability('avail')" method="post">
+        <button type="Continue" onclick= "addAvailability('avail')"
+        class="btn btn-primary" id="avail" name="Continue">
         Add Availability
         </button>
     </form>
 
-    <form action = "adminMode.html">
-            <button type="Continue" onclick= "addAvailability()"
-            class="btn btn-primary" name="Continue">
+    <form action="javascript:addAvailability('admin')" method="post">
+            <button type="Continue" onclick= "addAvailability('admin')"
+            class="btn btn-primary" id="admin" name="Continue">
             Admin Mode
             </button>
         </form>
